@@ -1,13 +1,13 @@
 /**
  * The MIT License (MIT)
  * Copyright © 2025 Infosys Limited
- * 
+ *
  * Permission is hereby granted, free of charge, to any person obtaining a copy of this software and associated documentation files (the “Software”),
  * to deal in the Software without restriction, including without limitation the rights to use, copy, modify, merge, publish, distribute, sublicense,
  * and/or sell copies of the Software, and to permit persons to whom the Software is furnished to do so, subject to the following conditions:
- * 
+ *
  * The above copyright notice and this permission notice shall be included in all copies or substantial portions of the Software.
- * 
+ *
  * THE SOFTWARE IS PROVIDED “AS IS”, WITHOUT WARRANTY OF ANY KIND, EXPRESS OR IMPLIED, INCLUDING BUT NOT LIMITED TO THE WARRANTIES OF MERCHANTABILITY,
  * FITNESS FOR A PARTICULAR PURPOSE AND NONINFRINGEMENT. IN NO EVENT SHALL THE AUTHORS OR COPYRIGHT HOLDERS BE LIABLE FOR ANY CLAIM, DAMAGES OR OTHER LIABILITY,
  * WHETHER IN AN ACTION OF CONTRACT, TORT OR OTHERWISE, ARISING FROM, OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN THE SOFTWARE.
@@ -36,14 +36,14 @@ import java.util.List;
 @Configuration
 public class CorsConfig {
 
-    @Value("${spring.cors.allowed-origins}")
-    private String allowedOrigins;
+    @Value("${spring.cors.allowedOriginPatterns}")
+    private String allowedOriginPatterns;
 
-    @Value("${spring.cors.allowed-headers}")
-    private String allowedHeaders;
+    @Value("${spring.cors.allowedHeaders}")
+    private String allowedHeader;
 
-    @Value("${spring.cors.allowed-methods}")
-    private String allowedMethods;
+    @Value("${spring.cors.allowedMethods}")
+    private String allowedMethod;
 
     @Value("${spring.cors.allow-credentials:true}")
     private boolean allowCredentials;
@@ -62,18 +62,27 @@ public class CorsConfig {
         UrlBasedCorsConfigurationSource source = new UrlBasedCorsConfigurationSource();
         CorsConfiguration config = new CorsConfiguration();
 
-        // Set allowed origins from YAML configuration
-        config.setAllowedOrigins(Arrays.asList(allowedOrigins.split(",")));
+        config.setAllowCredentials(true);
+        config.addAllowedOriginPattern(allowedOriginPatterns);
+        config.addAllowedHeader(allowedHeader);
+        config.setAllowedHeaders(
+                List.of(
+                        "Authorization",
+                        "Content-Type",
+                        "X-Requested-With",
+                        "Accept",
+                        "Origin",
+                        "Referer",
+                        "User-Agent",
+                        "Project",
+                        "ProjectName",
+                        "roleId",
+                        "roleName",
+                        "charset"
+                )
 
-        // Set allowed headers from YAML configuration
-        config.setAllowedHeaders(Arrays.asList(allowedHeaders.split(",")));
-
-        // Set allowed methods from YAML configuration
-        config.setAllowedMethods(Arrays.asList(allowedMethods.split(",")));
-
-        // Set credentials and max age
-        config.setAllowCredentials(allowCredentials);
-        config.setMaxAge(maxAge);
+        );
+        config.addAllowedMethod(allowedMethod);
 
         source.registerCorsConfiguration("/api/**", config);
         return new CorsFilter(source);
@@ -89,14 +98,31 @@ public class CorsConfig {
     @Bean
     public UrlBasedCorsConfigurationSource corsConfigurationSource() {
         CorsConfiguration configuration = new CorsConfiguration();
+        // 1. Allow your React app (3000), Angular app (8087), and Python Backend (7860)
+        configuration.setAllowedOrigins(Arrays.asList("http://localhost:3000", "http://localhost:8087", "http://localhost:7860", "https://langflow.az.ad.idemo-ppc.com",
+                "https://essedum.az.ad.idemo-ppc.com"));
 
-        // Use externalized configuration instead of hardcoded values
-        configuration.setAllowedOrigins(Arrays.asList(allowedOrigins.split(",")));
-        configuration.setAllowedMethods(Arrays.asList(allowedMethods.split(",")));
-        configuration.setAllowedHeaders(Arrays.asList(allowedHeaders.split(",")));
-        configuration.setAllowCredentials(allowCredentials);
-        configuration.setMaxAge(maxAge);
+        // 2. Allow the standard methods
+        configuration.setAllowedMethods(Arrays.asList("GET", "POST", "PUT", "DELETE", "OPTIONS"));
 
+        // 3. CRITICAL: Explicitly allow the custom headers you are sending in curl
+        // If you miss 'Project' or 'roleId' here, the browser will block the request
+        configuration.setAllowedHeaders(Arrays.asList(
+                "Authorization",
+                "Content-Type",
+                "Project",
+                "ProjectName",
+                "roleId",
+                "roleName",
+                "X-Requested-With",
+                "Accept",
+                "Origin",
+                "Access-Control-Request-Method",
+                "Access-Control-Request-Headers"
+        ));
+
+        // 4. Allow credentials if your fetch/axios request uses cookies/auth
+        configuration.setAllowCredentials(true);
         UrlBasedCorsConfigurationSource source = new UrlBasedCorsConfigurationSource();
         source.registerCorsConfiguration("/**", configuration);
         return source;
